# aws-lambda-cdk-go-hello

./: aws-lambda-cdk-go-hello.code-workspace
function/: Makefile  go.mod
functions/go-hello/: go.sum  main.go
functions/py-hello/: Makefile  handler.py  pyproject.toml
infra/: package-lock.json
infra/lib/: infra-stack.ts
